<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/ic_inicio"
            android:title="@string/inicio" />
        <item
            android:id="@+id/perfil"
            android:icon="@drawable/ic_cuenta_perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/chat"
            android:icon="@drawable/ic_buzon"
            android:title="@string/buzon" />
        <item
            android:id="@+id/manual"
            android:icon="@drawable/ic_manual"
            android:title="@string/manual" />
        <item
            android:id="@+id/centrodeactividades"
            android:icon="@drawable/ic_centroactividades"
            android:title="@string/actividades" />

        <item
            android:id="@+id/asesorias"
            android:icon="@drawable/ic_asesorias"
            android:title="@string/asesorias" />

        <item
            android:id="@+id/foro"
            android:icon="@drawable/ic_forum"
            android:title="@string/foro_discusion"/>

        <item
            android:id="@+id/quizz"
            android:icon="@drawable/ic_test"
            android:title="@string/test"/>

        <item
            android:id="@+id/resultad"
            android:icon="@drawable/ic_test"
            android:title="@string/resultados_test"/>


    </group>
</menu>
