<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alumno.ManualAlumno">

    <ImageView
        android:id="@+id/foto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.8"
        android:contentDescription="@string/globalimagen"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/SNIT"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/SNIT"
        android:textAlignment="center"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:fontFamily="@font/lato_black" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/texto"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:fontFamily="@font/lato"
        android:textSize="15sp" />

    <Button
        android:id="@+id/manual_descarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9e005d"
        android:fontFamily="@font/lato_bold"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:text="@string/button" />
</RelativeLayout>