<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/pantone7421"
    android:padding="10dp"
    tools:context=".Login">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/globalimagen"/>

    <TextView
        android:id="@+id/b"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/lato_bold"
        android:paddingBottom="20dp"
        android:text="@string/bienvenido"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/capsula"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="13dp"
        android:fontFamily="@font/lato"
        android:hint="@string/usuario"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />
    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:fontFamily="@font/lato"
        android:paddingEnd="20dp"
        android:background="@drawable/capsula"
        android:drawablePadding="13dp"
        android:drawableStart="@drawable/ic_key"
        android:imeOptions="actionSend" />

    <CheckBox
        android:id="@+id/showpassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:buttonTint="@color/white"
        android:fontFamily="@font/lato"
        android:text="@string/mostrar_contrase_a"
        android:textColor="@color/white"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btnAcceder"
            android:fontFamily="@font/lato_bold"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/capsula"
            android:backgroundTint="@color/pantone465"
            android:text="@string/acceder"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/lg_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noCuenta"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/lg_CONTRASEÑA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Olvide mi contraseña"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>
</LinearLayout>

<!--
        <RadioGroup
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_span="2">
            <RadioButton
                android:id="@+id/rdbOne"
                android:textColor="@color/colorWhite"
                android:buttonTint="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Soy alumno"/>
            <RadioButton
                android:id="@+id/rdbTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:text="Soy profesor"/>
        </RadioGroup>


 -->