<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="405dp"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorBoton">

        <ImageView
            android:id="@+id/popupA_imagen"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/presentacionpita"
            android:contentDescription="@string/globalimagen"/>
    </LinearLayout>

    <TextView
        android:id="@+id/popupA_titulo"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popupA_Titulo"
        android:textSize="20sp"
        android:fontFamily="@font/lato_bold"
        android:textAlignment="center"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/popupA_cuerpo"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/popupA_cuerpo"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="#000"/>


</LinearLayout>