<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pantone7421"
    android:paddingTop="10dp"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/globalimagen"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/Registro"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/tipoUsuario"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMaestro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/button_select"
                    android:button="@drawable/teacher" />

                <RadioButton
                    android:id="@+id/rbAlumno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_select"
                    android:button="@drawable/student" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:text="@string/Profesor"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/Alumno"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:drawablePadding="13dp"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTransparent"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/etAPaterno"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:drawablePadding="13dp"
                android:hint="@string/paterno"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTransparent"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/etAMaterno"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:drawablePadding="13dp"
                android:hint="@string/materno"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTransparent"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/etControl"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:drawablePadding="13dp"
                android:hint="@string/control"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTransparent"
                tools:targetApi="o" />

            <Spinner
                android:id="@+id/etDivision"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:backgroundTint="@color/white"
                android:focusable="true"
                android:fontFamily="@font/lato"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:spinnerMode="dialog" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnCalender"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/globalimagen"
                    app:srcCompat="@drawable/calendario" />

                <EditText
                    android:id="@+id/etFechaNAc"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext"
                    android:drawablePadding="13dp"
                    android:hint="@string/FechaNAc"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorTransparent"
                    tools:targetApi="o" />


                <Spinner
                    android:id="@+id/etSemestre"
                    android:layout_width="125dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edittext"
                    android:backgroundTint="@color/white"
                    android:focusable="true"
                    android:fontFamily="@font/lato"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:drawablePadding="13dp"
                android:hint="@string/correo"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTransparent"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/etContraseña"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:drawablePadding="13dp"
                android:hint="@string/contraseña"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTransparent"
                tools:targetApi="o" />

            <CheckBox
                android:id="@+id/showpassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:buttonTint="@color/white"
                android:fontFamily="@font/lato"
                android:text="@string/mostrar_contrase_a"
                android:textColor="@color/white"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btnCrear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/boton_rojo"
                android:backgroundTint="@color/pantone465"
                android:text="@string/crear"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
